Sprint2_solicitudes_guard

--- a/src/app/components/administrador/administrador.component.css
+++ b/src/app/components/administrador/administrador.component.css
@@ -4,11 +4,21 @@
 .formulario_completo_artistas{
  margin-top: 30px;
  margin-left: 100px;
- width: 600px;
+ width: 800px;
+ height: 900px;
 }
 .table {
     width: 100%;
   }
+  .nav-link{
+    color: black;
+}
+.text-white{
+    color: black;
+}
+.nombre_list{
+    color: black;
+}
 
   
  
