--- a/src/app/components/administrador/solicitud-rechazadas/solicitud-rechazadas.component.css
+++ b/src/app/components/administrador/solicitud-rechazadas/solicitud-rechazadas.component.css
@@ -5,7 +5,8 @@
 
     margin-top: 30px;
     margin-left: 100px;
-    width: 600px; 
+    width: 800px; 
+    height: 900px;
 }
 .nav-link{
     color: black;
