--- a/src/app/components/administrador/solicitud-rechazadas/solicitud-rechazadas.component.html
+++ b/src/app/components/administrador/solicitud-rechazadas/solicitud-rechazadas.component.html
@@ -8,16 +8,17 @@
 
     <thead class=" text-white">
         <tr>
+            <th> <a class="nav-link" routerLink="//administrador">Solicitud </a></th> 
             <th> <a class="nav-link" routerLink="/solicitud-aceptadas">Aceptadas </a></th>
             <th> <a class="nav-link" routerLink="/solicitud-rechazadas">Rechazadas </a></th>
-            <th> <a class="nav-link" routerLink="//administrador">Solicitud </a></th>           
+                     
         </tr>
         <tr class="nombre_list">
             <th >N.-</th>
             <th>Nombre Artistico</th>
             <th>Nacionalidad</th>
-            <th>Rol</th>
-            <th>Estado</th>
+            
+            
            
 
            
@@ -29,11 +30,11 @@
             <td>{{desde+i+1}}</td>
             <td>{{administrador.nombre_artistico}}</td>
             <td>{{administrador.nacionalidad}}</td>
-            <td>{{administrador.rol}}</td>
+          <!--  <td>{{administrador.rol}}</td>!-->
            
             <td>
                
-                <button (click)="convertToArtist(administrador)" class="btn btn-success">Aceptar</button>
+                <!--usuario de twitter <button (click)="convertToArtist(administrador)" class="btn btn-success">Aceptar</button>-->
             </td>
 
         </tr>
