--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -23,24 +23,11 @@
     <li  >
       <a routerLink="/administrador" class="nav-link text-white">
         <svg class="bi me-2" width="16" height="60"></svg>
-        Solicitud Nuevas
+        Solicitud 
       </a>
     </li>
-    <li   >
-      <a routerLink="/solicitud-aceptadas" class="nav-link text-white">
-        <svg class="bi me-2" width="16" height="60"></svg>
-       Solicitud Aceptadas
-      </a>
-    </li>
-    <li  >
-      <a routerLink="/solicitud-rechazadas" class="nav-link text-white">
-        <svg class="bi me-2" width="16" height="60"><use xlink:href="#people-circle"/></svg>
-        Solicitud Rechazadas
-      
-      
-      </a>
-      
-    </li>
+  
+ 
   
   <li>
   </ul>
