--- a/src/app/components/usuarios/Albumes/edit-albumes/edit-albumes.component.html
+++ b/src/app/components/usuarios/Albumes/edit-albumes/edit-albumes.component.html
@@ -1,1 +1,37 @@
-<p>edit-albumes works!</p>
+<app-header-artist></app-header-artist>
+<div class="contenedos_edit_generos">
+  <app-sidenav-user></app-sidenav-user>
+<form class="formulario_generos" (ngSubmit)="onSubmit()" [formGroup]="ediForm">
+  <div class="input-group mb-3">
+    <input type="text" class="form-control" placeholder="Album" required formControlName="name">    
+  </div>
+  <div class="input-group mb-3">
+    <input type="text" class="form-control" placeholder="Autor" required formControlName="author">
+  </div>
+  <div class="input-group mb-3">
+    <input type="text" class="form-control" placeholder="Año" required formControlName="year">
+  </div>
+<div class="form-group">
+  
+
+    <input 
+        type="file"
+        #file
+        class="input-file" accept="image/*"
+        (change)="onFilesAdded($event.target)"
+    />
+    <img (click)="addFiles()" class="upload" [src]="this.url" alt="" />
+
+
+</div>
+
+
+<div class="modal-footer">
+  <button  class="btn btn-secondary" [disabled]="!ediForm.valid"   type="submit">EDITAR</button>
+ 
+</div>
+</form>
+
+
+
+</div>
