--- a/src/app/components/usuarios/Albumes/show-albumes/show-albumes.component.css
+++ b/src/app/components/usuarios/Albumes/show-albumes/show-albumes.component.css
@@ -4,3 +4,12 @@
 .btn{
     margin: 10px;
 }
+.imagenes_generos{
+    width: 220px;
+    height: 200px;
+    text-align: center;
+}
+.btn{
+    margin: 2px;
+    font-size: 80% ;     
+}
