--- a/src/app/components/usuarios/sidenav-user/sidenav-user.component.html
+++ b/src/app/components/usuarios/sidenav-user/sidenav-user.component.html
@@ -27,7 +27,7 @@
       </a>
     </li>
     <li>
-      <a routerLink="/" class="nav-link text-white">
+      <a routerLink="/Albumes" class="nav-link text-white">
         <svg class="bi me-2" width="16" height="60"></svg>
         Albumes
       </a>
