--- a/src/app/auth/forgot-password/forgot-password.component.css
+++ b/src/app/auth/forgot-password/forgot-password.component.css
@@ -1,14 +1,21 @@
 .formulario_forgot_password{
     display: flex;
+    background: #5C258D;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to bottom, #2D31FA, #41ACDA,#5D8BF4);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to bottom, #2D31FA, #41ACDA,#5D8BF4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    height: auto;
 }
-.formulario_forgot_password img{
-    width: 700px;
-    height: 700px;
-    padding-right: 30px;
+.imagen_forgot_password{
+    width: 50%;
+    max-height: 3250px;
+ 
+
+    background-position-x: center;
+    background-image: url("https://images.pexels.com/photos/12311203/pexels-photo-12311203.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
    
 }
 .card{
-    margin-top: 30px;
+    
     margin-left: 150px;   
 }
 /*
@@ -18,28 +25,44 @@
     align-items: center;
     width: 200px;
 }*/
-
+.card-header{
+    color: white;
+}
 .card-body{
     text-align: center;
     align-items: center;
    
-    width: 200px;
+    width: auto;
+    height: 800px;
+    padding: 0% !important;
+
+ 
  
 }
-.card body h2{
-margin-top: 30px;
-}
-.card-body h3{
-    margin-top: 30px;  
+.imagen{
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
 
+
 .form-control{
-width: 300px;
-margin-left: 130px !important;
+ width: 75%;
+text-align: center;
+margin-left: 15%;
+
 
 }
 
 .btn{
- 
     margin-top: 30px;
+    border-radius: 30px;
+    background: #2D31FA;
+    color:white;
 }
+.final_de_pagina{
+    color: aliceblue;
+}
+.nav-link{
+    color: aliceblue;
+}
+
