--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -1,20 +1,36 @@
 <app-header></app-header>
 
 <div class="formulario_forgot_password">
-  <img src="https://images.pexels.com/photos/3756766/pexels-photo-3756766.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="">
+  <div class="imagen_forgot_password">
 
+  </div>
   
-    <div class="card-body m-2">
-      
-      <h3 class="card-title text-center ">Ingrese su email</h3>
+    <div class="card-body ">  
+      <div class="card-header">
+        Recuperar contraseña
+       </div>
+      <img class="imagen" src="assets/imagenes/oficial_logo.png" alt="" width="120px" height="120px">
       <div class="form-group m-2">
-        <input type="email"class="form-control" [formControl]="userEmail"required  />
+        <input type="email"class="form-control" [formControl]="userEmail"required placeholder="correo electrónico" />
       </div>
       <div class="form-group text-center">
-        <button [disabled]="userEmail.invalid" class="btn btn-primary btn-lg" (click)="onReset()" >
+        <button [disabled]="userEmail.invalid" class="btn  " (click)="onReset()" >
           Enviar el correo
         </button>
+        
       </div>
     </div>
 
 </div>
+<footer class="final_de_pagina  " style="background-color:#1a252f ">
+  
+  <div class="copyright py-4 text-center text-white ">
+      
+      <a class="nav-link active" aria-current="page" routerLink="/sobrenosotros">¿Quiénes Somos?</a>
+    
+    
+      <a class="nav-link active" aria-current="page" routerLink="/mision-vision">Misión y Visión</a>
+    
+  <div class="container"><small>Copyright &copy; Taki-Tri 2022</small></div>
+  </div>
+  </footer>
