--- a/src/app/components/administrador/solicitud-rechazadas/solicitud-rechazadas.component.html
+++ b/src/app/components/administrador/solicitud-rechazadas/solicitud-rechazadas.component.html
@@ -3,34 +3,40 @@
     <app-sidenav></app-sidenav>
 <div class="formulario_completo_artistas_aceptados">
     <h2>Artista Rechazados </h2>
-
+    <p>En esta sección se visualiza, todas las solicitudes Rechazadas por el administrador.
+        Para que una solicitud sea rechazada ,los datos enviados no son correctos, o el documento PDF, no cuenta con los datos solicitados,
+         o se encuentra con datos no correctos del Artista.
+    </p>
+    <tr>
+        <th> <a class="nav-link" routerLink="//administrador">Solicitud </a></th> 
+        <th> <a class="nav-link" routerLink="/solicitud-aceptadas">Aceptadas </a></th>
+        <th> <a class="nav-link" routerLink="/solicitud-rechazadas">Rechazadas </a></th>
+                 
+    </tr>
 <table class="table table-hover ">
 
-    <thead class=" text-white">
-        <tr>
-            <th> <a class="nav-link" routerLink="//administrador">Solicitud </a></th> 
-            <th> <a class="nav-link" routerLink="/solicitud-aceptadas">Aceptadas </a></th>
-            <th> <a class="nav-link" routerLink="/solicitud-rechazadas">Rechazadas </a></th>
-                     
-        </tr>
-        <tr class="nombre_list">
-            <th >N.-</th>
-            <th>Nombre Artistico</th>
-            <th>Nacionalidad</th>
-            
-            
-           
 
-           
+    <thead class=" text-white">
+        <input type="text" class="form-control " placeholder="Buscar Solicitud" #textSearch (keyup)="onSearchSolicitud_Rechazadas(textSearch.value)"/>    
+       
+  
+        <tr class="nombre_list">
+            <th>N.-</th>
+            <th>Nombre Artistico</th>
+            <th>Numero de Cédula</th>   
+             <th>Documento</th> 
+             <th>Razón</th>            
         </tr>
       
     </thead>
     <tbody>
-        <tr *ngFor="let administrador of Administrador | slice:desde:hasta let i= index" >
+        <tr  *ngFor="let administrador of Administrador | filtroSolicitudRechazadas:page:search let i= index" >
             <td>{{desde+i+1}}</td>
             <td>{{administrador.nombre_artistico}}</td>
             <td>{{administrador.nacionalidad}}</td>
-          <!--  <td>{{administrador.rol}}</td>!-->
+            <td> <a [href]="administrador.document" target="_blank"  rel="noopener noreferrer" ><img src="https://www.science.co.il/internet/browsers/PDF-doc-256.png" style="height:50px" alt=""></a></td>
+          <td>{{administrador.razon}}</td>
+            <!--  <td>{{administrador.rol}}</td>!-->
            
             <td>
                
