--- a/src/app/components/usuarios/sidenav-user/sidenav-user.component.html
+++ b/src/app/components/usuarios/sidenav-user/sidenav-user.component.html
@@ -33,6 +33,12 @@
       </a>
     </li>
     <li>
+      <a routerLink="/Canciones" class="nav-link text-white">
+        <svg class="bi me-2" width="16" height="60"></svg>
+      Canciones
+      </a>
+    </li>
+    <li>
       <a href="#" class="nav-link text-white">
         <svg class="bi me-2" width="16" height="60"><use xlink:href="#people-circle"/></svg>
       Buscar
