--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,7 +1,7 @@
 <style>
     .final_de_pagina{
       
-      background:#051367;
+      background-color:#1a252f;
       color:white;  
      
     }
@@ -16,14 +16,14 @@
       color:aliceblue
     }
 </style>
-<footer class="final_de_pagina  bg-dark">
+<footer class="final_de_pagina  ">
   <br>
  
   
-    <a class="nav-link active" aria-current="page" routerLink="sobrenosotros">¿Quiénes Somos?</a>
+    <a class="nav-link active" aria-current="page" routerLink="/sobrenosotros">¿Quiénes Somos?</a>
   
   
-    <a class="nav-link active" aria-current="page" routerLink="mision-vision">Misión y Visión</a>
+    <a class="nav-link active" aria-current="page" routerLink="/mision-vision">Misión y Visión</a>
   
-  <h5>@Derechos de Tesis -Taki-Tri</h5>  
+
 </footer>
