--- a/src/app/components/administrador/administrador.component.css
+++ b/src/app/components/administrador/administrador.component.css
@@ -19,6 +19,19 @@
 .nombre_list{
     color: black;
 }
+.formulario_completo_artistas p{
+    color:black;
+    border-style: solid;
+    border-width: 3px;
+    border-left-width: 10px;
+    border-right-width: 10px;
+    border-top-color:yellow;
+    border-right-color:blue;
+    border-left-color:blue;
+    border-bottom-color:red;
+    padding: 5px;
+    margin-bottom: 20px;
+}
 
   
  
