--- a/src/app/components/administrador/administrador.component.html
+++ b/src/app/components/administrador/administrador.component.html
@@ -5,24 +5,34 @@
     <app-sidenav></app-sidenav>
 <div class="formulario_completo_artistas">
     <h2>Candidatos a artistas</h2>
+    <p>En esta sección se visualiza, todas las solicitudes enviadas por los artista para ser parte de Taki-Tri,las mismas que son analizadas 
+         por el administrador, quien evalua los datos enviados y procede aceptar o rechazar las solicitudes respectivas.
+        Para que una solicitud sea rechazada ,los datos enviados no son correctos, o el documento PDF, no cuenta con los datos solicitados,
+         o se encuentra con datos no correctos del Artista.
+    </p>
+    <tr>
+        <th> <a class="nav-link" routerLink="/administrador">Solicitud </a></th>
+        <th> <a class="nav-link" routerLink="/solicitud-aceptadas">Aceptadas </a></th>
+        <th> <a class="nav-link" routerLink="/solicitud-rechazadas">Rechazadas </a></th>
+      
+    
+   
+      
+        
+        
+       
+
+       
+    </tr>
     
 <table class="table table-hover ">
     <thead class="text-white">
-        <tr>
-            <th> <a class="nav-link" routerLink="/administrador">Solicitud </a></th>
-            <th> <a class="nav-link" routerLink="/solicitud-aceptadas">Aceptadas </a></th>
-            <th> <a class="nav-link" routerLink="/solicitud-rechazadas">Rechazadas </a></th>
-       
-          
-            
-            
-           
-
-           
-        </tr>
+  
     </thead>
       <br>
     <thead class=" text-white">
+        <input type="text" class="form-control " placeholder="Buscar Solicitud" #textSearch (keyup)="onSearchMensaje(textSearch.value)"/>
+   
         <tr class="nombre_list">
             <th>N.-</th>
             <th>Nombre Artistico</th>
@@ -32,9 +42,9 @@
     </thead>
     <tbody>
  
-
-        <tr *ngFor="let administrador of Administrador | slice:desde:hasta let i= index  "  >
-            <td>{{desde+i+1}}</td>
+         
+        <tr *ngFor="let administrador of Administrador | filtroSolicitud:page:search let i= index   "  >
+           <td>{{page+i+1}}</td>
             <td>{{administrador.nombre_artistico}}</td>
             <td>{{administrador.nacionalidad}}</td>
         
