--- a/src/app/components/administrador/solicitud-rechazadas/solicitud-rechazadas.component.css
+++ b/src/app/components/administrador/solicitud-rechazadas/solicitud-rechazadas.component.css
@@ -8,6 +8,20 @@
     width: 800px; 
     height: 900px;
 }
+.formulario_completo_artistas_aceptados p{
+    color:black;
+    border-style: solid;
+    border-width: 3px;
+    border-left-width: 10px;
+    border-right-width: 10px;
+    border-top-color:yellow;
+    border-right-color:blue;
+    border-left-color:blue;
+    border-bottom-color:red;
+    padding: 5px;
+    margin-bottom: 20px;
+}
+
 .nav-link{
     color: black;
 }
