--- a/src/app/components/usuarios/Albumes/edit-albumes/edit-albumes.component.css
+++ b/src/app/components/usuarios/Albumes/edit-albumes/edit-albumes.component.css
@@ -1,3 +1,42 @@
 .contenedos_edit_generos{
     display: flex;
 }
+.formulario_albumes_completo{
+   
+    width: auto;
+ 
+}
+
+.formulario_albumes{
+  
+   width: 450px;
+    margin-top: 15%;
+  
+    margin-left: 16%;
+ 
+}
+.input-group{
+    max-width: 250%;
+}
+.imagenes_albumes img{
+    margin-top: 30%;
+    margin-left: 10%;
+    height: 150px;
+    width: 150px;
+    align-items: center;
+    text-align: center;
+    
+    
+  
+    border-radius:150px;
+    border:2px solid #666;
+   
+}
+.imagenes_albumes{
+    margin-left: 7%;  
+    width: 70%;
+}
+.input-file{
+    margin-top: 5%;
+    margin-left: 10%; 
+}
