--- a/src/app/components/usuarios/solicitud/solicitud.component.css
+++ b/src/app/components/usuarios/solicitud/solicitud.component.css
@@ -1,12 +1,68 @@
 .formulario{
     display: flex;
+    height: auto;
+   
 }
 .formulario_solicitud{
-    margin-left: 400px;
-    margin-top: 30px;
+    margin-left: 30px;
+    margin-top: 2px;
+
+    width: 100%;
+    height: auto;
 }
 .mb-3{
-width: 250px;
+width: 350px;
+
 
 }
+.mensaje{
+   width: 100%;
+   height: 50px;
 
+   margin-bottom: 20px;
+}
+.mensaje td{
+    border-radius: 30px; 
+    margin-bottom: 10px;
+    margin-top: 10px;
+    
+}
+.mensaje th{
+   padding-bottom: 5px;
+   margin-top: 5px;
+  
+    border-radius: 30px;
+    padding: 5px;
+}
+
+.contenedor_mensaje_solicitud{
+    height: 250px;  
+  
+}
+.form-control{
+    width: 250px;
+}
+.btn1{
+    border-radius: 30px;
+}
+.btn{   
+    border-radius: 30px;
+    display:inline-flex;
+    align-items: center;
+    margin-bottom: 20px; 
+}
+.formulario_solicitud p{
+    color:black;
+    border-style: solid;
+    border-width: 3px;
+    border-left-width: 10px;
+    border-right-width: 10px;
+    border-top-color:yellow;
+    border-right-color:blue;
+    border-left-color:blue;
+    border-bottom-color:red;
+    padding: 5px;
+    margin-bottom: 20px;
+    margin-right: 20px;
+    margin-top: 20px;
+}
