--- a/src/app/components/usuarios/solicitud/solicitud.component.html
+++ b/src/app/components/usuarios/solicitud/solicitud.component.html
@@ -2,8 +2,16 @@
 <div class="formulario">
     <app-sidenav-user></app-sidenav-user>
 <div class="formulario_solicitud">
-<p>Solicitud</p>
+  <p>En esta sección se visualiza, todas las solicitudes enviadas por los artista para ser parte de Taki-Tri,las mismas que son analizadas 
+    por el administrador, quien evalua los datos enviados y procede aceptar o rechazar las solicitudes respectivas.
+   Para que una solicitud sea rechazada ,los datos enviados no son correctos, o el documento PDF, no cuenta con los datos solicitados,
+    o se encuentra con datos no correctos del Artista.
+  </p>
+
+ 
 <h2>Enviar Solicitud</h2>
+
+
 <form [formGroup]="solicitudlForm" (ngSubmit)="onSubmit()" novalidate>
     <div class="mb-3">
         <label class="form-label">Nombre Artistico</label>
@@ -32,8 +40,47 @@
         
     
 </form>
+<hr>
+<div class=" contenedor_mensaje_solicitud"  >
+ 
+<h4>Mensajes de estado de Solicitud</h4> 
+<input type="text" class="form-control mb-2" placeholder="Buscar..." #textSearch (keyup)="onSearchMensaje(textSearch.value)"/>
+       
+        <div *ngFor="let administrador of MensajeSolicitud  | filtro:page:search" class="mensaje" >
+         
+        <thead >
+          <tr >
+            <th scope="col">Solicitud rechazada el  {{administrador.hora}}   
+            </th>
+            
+          </tr>
+        </thead>
+          <table class="table table-striped">
+        <tbody>
+          <tr >
+            
+            <td>Motivo : {{administrador.mensaje}}</td>
+          
+           
+      
+               <button type="button" class="btn1 btn-outline-danger" (click)="eliminar(administrador)">Eliminar</button>
+           
+            
+          </tr>
+       
+        </tbody>
+      </table> 
+  
+
+     
+    </div>
+   
+  </div>
+  <button class="btn btn-primary" (click)="atras_pagina_mensaje_solicitud()" >Anterior</button>
+  <button class="btn btn-primary" (click)="siguiente_pagina_mensaje_solicitud() " [disabled]="(MensajeSolicitud  | filtro:page:search).length<1">Siguiente</button> 
+ 
 </div>
 
-
 </div>
+
 
