--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -2,13 +2,26 @@
     display:contents;
   
   }
+  .navbar-brand img{
+    width:90px;
+    height:60px;
+    
+  }
+
+
   .home{
       text-decoration: none;
       color: aliceblue;
     }
+    .home img{
+      width:60px;
+    height:60px;
+    border-radius:150px;
+    }
     .nav-link{
       color: aliceblue;
     }
+    
 
 
 
