--- a/src/app/shared/welcome/welcome.component.html
+++ b/src/app/shared/welcome/welcome.component.html
@@ -1,131 +1,127 @@
-<style>
-  .Pagina_principal {
-    background: #2D31FA;
-    color: white;
-    font-size: 250% ;
-    padding-left: 150px;
-    padding-top: 120px;
-    text-align: left;
-    display: flex;
-    padding-bottom: 250px;
-    
-  }
-  .Pagina_principal h1{
-    font-size: 100% ;
-  }
-  .Pagina_principal_derecho h1{
-    font-size: 160% ;
-    width: 600px;
-    padding-bottom: 90px;
-    padding-top: 50px;
-    line-height:normal;
-    
-    
-    
-  }
-  .button_ver_mas{
-    color: black;
-    background: #DFF6FF;
-    border-radius: 30px;
-    width: 150px;
-    text-align: center;
-    margin-left: 490px;
-    
-  }
-  .generos_Musicales h2{
-    font-size: 160% ;
-    padding-top: 100px;
-    text-align: center;
-    padding-bottom: 30px;
-  }
-  .card{
-  
-    height: 550px;
-    color:black;
-    text-align: center;
-    width: 350px;
-    border-radius: 30px;
-    margin-left: 120px;
-  }
-  .card img{
-    border-radius: 30px;
-  }
-  .card_generos{
-    display: flex;
-    margin-right: 80px;
-  }
-  
-  .card img{
-    padding-top: 20px;
-    border-radius: 30px;
-    height: 430px;
-  }
 
-    
-   
-  
-   
-    
-</style>
+<body id="page-top">
+  <!-- Navigation-->
+  <app-header></app-header>
+  <!-- Masthead-->
+  <header class="masthead bg-primary text-white text-center">
+      <div class="container d-flex align-items-center flex-column">
+          <!-- Masthead Avatar Image-->
+          <img class="masthead-avatar mb-5" src="assets/imagenes/oficial_logo.png" alt="..." />
+          <!-- Masthead Heading-->
+          <h1 class="masthead-heading text-uppercase mb-0">TAKI-TRI</h1>
+          <!-- Icon Divider-->
+          <div class="divider-custom divider-light">
+              <div class="divider-custom-line"></div>
+              <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+              <div class="divider-custom-line"></div>
+          </div>
+          <!-- Masthead Subheading-->
+          <p class="masthead-subheading font-weight-light mb-0">Tu talento más cerca de tus fans</p>
+      </div>
+  </header>
+  <!-- Portfolio Section-->
+  <section class="page-section portfolio" id="portfolio">
+      <div class="container">
+          <!-- Portfolio Section Heading-->
+          <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">CREA</h2>
+          <!-- Icon Divider-->
+          <div class="divider-custom">
+              <div class="divider-custom-line"></div>
+              <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+              <div class="divider-custom-line"></div>
+          </div>
+          <!-- Portfolio Grid Items-->
+          <div class="row3 justify-content-center">
+              <!-- Portfolio Item 1-->
+              <div class="col-md-6 col-lg-3 mb-5">
+                  <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal1">
+                      <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                          <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                      </div>
+                      <h3 class="titulo_h3">Géneros</h3>
+                      <img class="img-fluid" src="https://images.pexels.com/photos/8044068/pexels-photo-8044068.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="..." />
+                 
+                    </div>
+              </div>
+              <!-- Portfolio Item 2-->
+              <div class="col-md-6 col-lg-3 mb-5">
+                  <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal2">
+                      <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                          <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                      </div>
+                       <!-- Portfolio noemi-->
+                       <h3 class="titulo_h3">Álbumes</h3>
+                      <img class="img-fluid" src="https://images.pexels.com/photos/4200745/pexels-photo-4200745.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"/>
+                  </div>
+              </div>
+              <!-- Portfolio Item 3-->
+              <div class="col-md-6 col-lg-3 mb-5">
+                  <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal3">
+                      <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                          <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                      </div>
+                      <h3 class="titulo_h3"> Canciones</h3>
+                       <img class="img-fluid" src="https://images.pexels.com/photos/534283/pexels-photo-534283.jpeg?auto=compress&cs=tinysrgb&" alt="..." />
+                 </div>
+              </div>
+           
+            
+           
+            
+          </div>
+      </div>
+  </section>
+  <!-- About Section-->
+  <section class="page-section bg-primary text-white mb-0" id="about">
+      <div class="container">
+          <!-- About Section Heading-->
+          <h2 class="page-section-heading text-center text-uppercase text-white">Acerca </h2>
+          <!-- Icon Divider-->
+          <div class="divider-custom divider-light">
+              <div class="divider-custom-line"></div>
+              <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+              <div class="divider-custom-line"></div>
+          </div>
+          <!-- About Section Content-->
+          <div class="row">
+              <div class="col-lg-4 ms-auto"><p class="lead">De una forma gratuita los artistas, tiene la posibilidad de subir su albumes, canciones y más en una plataforma hecha esclusivamnete para artistas ecuatorinos y asi destacar el talento del País</p></div>
+              <div class="col-lg-4 me-auto"><p class="lead">Mediante la parte administrativa, se da acceso a los artistas a todo el gestionamiento de albumes, canciones , dandole realce a tu autoria y control de su carrera musical</p></div>
+          </div>
+          <!-- About Section Button-->
+          <div class="text-center mt-4">
+              <a class="btn btn-xl btn-outline-light" routerLink="/sobrenosotros">
+                  <i class="fas fa-download me-2"></i>
+                  Programador!
+              </a>
+          </div>
+      </div>
+  </section>
+  <!-- Contact Section-->
 
-
-
-
-<app-header></app-header>
-<div class="Pagina_principal col-lg-12 col-md-12 col-sm-12">
-   
-
- <div class="Pagina_principal_derecho col-lg-12 col-md-12 col-sm-12">
-   <div class="parte_principal">
-  <h1 >Se parte de la Identidad Musical Ecuatoriana</h1>
-  
-  <img  src="assets/imagenes/oficial_logo.png" width="300px" height="250px">
-</div>
-  <button type="button" class="button_ver_mas"><h3>ver más</h3></button>
-
-  <div class="generos_Musicales">
-
-    <h2>Géneros Musicales </h2>
-    <div class="card_generos">
-
-    <div class="card" >
-     
-      <div class="card-body">
-        <h3 class="card-title">Pasillo</h3>
-        <img src="https://images.pexels.com/photos/5311643/pexels-photo-5311643.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" class="card-img-top" alt="...">
-      
-    </div>
-  </div>
-
-
-  <div class="card" >
-     
-    <div class="card-body">
-      <h3 class="card-title">San Juanito</h3>
-      <img src="https://images.pexels.com/photos/9630166/pexels-photo-9630166.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" class="card-img-top" alt="..." >
-    
-  </div>
-</div>
-
-
-  </div>
-
-
-
-
-
-  </div>
+  <!-- Footer-->
 
    
 
-
- </div>
+  <!-- Copyright Section-->
+  <div class="copyright py-4 text-center text-white">
+    <app-footer></app-footer>
+      <div class="container"><small>Copyright &copy; Your Website 2022</small></div>
+  </div>
 
 
  
-
+ 
  
 
-
-</div>
-
+  
+  <!-- Bootstrap core JS-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Core theme JS-->
+  <script src="js/scripts.js"></script>
+  <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
+  <!-- * *                               SB Forms JS                               * *-->
+  <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
+  <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
+  <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+  
+</body>
